# tracer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: mcp_client.py
src/tracer/: __init__.py  __main__.py  cli.py  command_parser.py  config.py  tracer_core.py
src/tracer/cli/: __init__.py  client.py  command_parser.py  interface.py
src/tracer/core/: __init__.py  base_tracer.py  fs_tracer.py  net_tracer.py
src/tracer/db/: connection.py  models.py
src/tracer/db/crud/: __init__.py  base_crud.py  fs_crud.py  net_crud.py
src/tracer/logs/: fs.jsonl
src/tracer/mcp/: resources.py  server.py  tools.py
src/tracer/server/: mcp_server.py  resources.py  tools.py
src/tracer/store/: __init__.py  log_reader.py  log_writer.py
src/tracer/utils/: __init__.py  cli_utils_logRW.py  cli_utils_tracing.py  timestamp.py
tracer/: cli.py
tracer/store/: log_reader.py
tracer/utils/: timestamp.py
