[project]
name = "tracer"
version = "0.1.0"
description = "A Python library for tracing filesystem and network activity."
authors = [
  { name="Ahmed Gamea", email="ahmed.gamea@edu.eg" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich",             # For rich logs and CLI formatting
  "watchdog",   # For filesystem tracing
  "sqlalchemy",
  "mcp[cli]",
  "pydantic"
]

[project.scripts]
tracer = "tracer.__main__:main"
server = "tracer.server.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourname/tracer"